--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "backend",
+  "name": "bookmarks-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+   "dev": "node --watch server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +16,5 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
     "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   }
 }
